# AdventOfCode

./: pyproject.toml
2021/: pyproject.toml
2021/day1/: day1_1.py
2021/day2/: day2_1.py  day2_2.py
2022/: pyproject.toml  template.py
2022/day1/: main.py
2022/day2/: part1.py  part2.py
2022/day3/: part1.py  part2.py
2022/day4/: part1.py  part2.py
2022/day5/: part1.py  part2.py
2022/day6/: part1_2.py
day1/: day1_2.py
