[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Quint"]

[tool.poetry.dependencies]
python = "3.10"
ipython = "^7.30.0"
numpy = "^1.21.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^21.11b1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
