[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ruff = "^0.0.168"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
